2014-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* Mark Jet::containsBottom and Jet::containsCharm as deprecated methods: use !bTags().empty() etc.

2014-09-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding support for 1D and 3D YODA scatters, and helper methods
	for calling the efficiency, asymm and 2D histo divide functions.

2014-09-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding 5 new ATLAS analyses:
	ATLAS_2011_I921594: Inclusive isolated prompt photon analysis with full 2010 LHC data
	ATLAS_2013_I1263495: Inclusive isolated prompt photon analysis with 2011 LHC data
	ATLAS_2014_I1279489: Measurements of electroweak production of dijets + $Z$ boson, and distributions sensitive to vector boson fusion
	ATLAS_2014_I1282441: The differential production cross section of the $\phi(1020)$ meson in $\sqrt{s}=7$ TeV $pp$ collisions measured with the ATLAS detector
	ATLAS_2014_I1298811: Leading jet underlying event at 7 TeV in ATLAS

	* Adding a median(vector<NUM>) function and fixing the other stats
	functions to operate on vector<NUM> rather than vector<int>.

2014-09-03  Andy Buckley  <andy.buckley@cern.ch>

	* Fix wrong behaviour of LorentzTransform with a null boost vector
	-- thanks to Michael Grosse.

2014-08-26  Andy Buckley  <andy.buckley@cern.ch>

	* Add calc() methods to Hemispheres as requested, to allow it to
	be used with Jet or FourMomentum inputs outside the normal
	projection system.

2014-08-17  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to the particles methods on
	ParticleFinder/FinalState, in particular adding the range of cuts
	arguments cf. JetAlg (and tweaking the sorted jets equivalent) and
	returning as a copy rather than a reference if cut/sorted to avoid
	accidentally messing up the cached copy.

	* Creating ParticleFinder projection base class, and moving
	Particles-accessing methods from FinalState into it.

	* Adding basic forms of MC_ELECTRONS, MC_MUONS, and MC_TAUS
	analyses.
